# packrat

./: .gitignore  PLAN.md  README.md  TODO.md  pyproject.toml
docs/: M0.md  M1-M2.md  M3.md  M4.md  M5.md  M6-component-plan.md  M6-tui-mockups.md  _tui_mockup_gen.py
src/packrat/: __init__.py  build.py  config.py  fsutil.py  ignore.py  matcher.py  media.py  paths.py  profiling.py  queries.py  review.py  review_stats.py  roots.py  shortcuts.py  smoke.py  trash.py  util.py
src/packrat/cli/: __init__.py  main.py  stream.py
src/packrat/daemon/: __init__.py  __main__.py  client.py  server.py  spawn.py  state.py  token.py
src/packrat/db/: __init__.py  connection.py  schema.py
src/packrat/jobs/: __init__.py  _dbops.py  _guards.py  cleanup.py  context.py  dedup.py  dedup_rank.py  demo.py  labels.py  merge.py  probe.py  queue.py  reconcile.py  registry.py  scan.py  scheduler.py  trash_refresh.py  untrash.py
src/packrat/tui/: __init__.py  app.py  colorize.py  data.py  demo.py  fixtures.py  frames.py  framing.py  geometry.py  layout.py  (+6 more)
tests/: conftest.py  test_api.py  test_api_cleanup.py  test_api_merge.py  test_api_roots.py  test_cleanup.py  test_cli_helpers.py  test_config.py  test_daemon_selfheal.py  test_db.py  test_dedup.py  test_detail_score.py  test_dev_clear_db.py  test_fsutil.py  test_ignore.py  test_job_labels.py  test_jobs.py  test_logging.py  test_matcher.py  test_media_pdq_downscale.py  test_media_transport_stream.py  test_merge.py  test_probe.py  test_profiling.py  test_review.py  test_review_stats.py  test_roots.py  test_scan.py  test_scan_results.py  test_scheduler.py  test_smoke.py  test_trash.py  test_tui_app.py  test_tui_colorize.py  test_tui_data.py  test_tui_databinding.py  test_tui_demo.py  test_tui_golden.py  test_tui_layout.py  test_tui_mockup_gen.py  (+6 more)
(+16 files in other folders)
